# obs-scene-monitor-changer

./: Cargo.toml  LICENSE  README.md
res/: config.json
src/: main.rs  model.rs
