[package]
name = "obs-scene-monitor-changer"
authors = ["SetheenDev <andy@pinefog.com>"]
version = "0.1.0"
edition = "2021"
rust-version = "1.62.1"
license = "MIT"
readme = "README.MD"
description = "Change OBS scene based on which monitor your mouse cursor resides"
homepage = "https://github.com/PineFog/obs-scene-monitor-changer"
repository = "https://github.com/PineFog/obs-scene-monitor-changer"
categories = ["obs", "obs-websocket"]
include = ["src/**/*", "res/**/*", "README.MD", "LICENSE"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
obws = "0.10.0"
tokio = { version = "1.22.0", features = ["full"] }
winit = "0.27.5"
enigo = "0.0.14"
notify = { version = "5.0.0", default-features = false, features = ["serde", "macos_kqueue"] }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"